fixed issue on mobile where bottom get cut off

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@ body{
     animation: slide 60s linear infinite;
     background-image: url('../images/background2.jpg');
     height: 560px;
-  width: 5076px;
+    width: 5076px;
 }
 
 .taco{
@@ -70,6 +70,7 @@ body{
   left:0;
   width:100%;
  height:100%;
+ padding-bottom: 55px;
 }
 
 @-webkit-keyframes scroll{
